# AdventOfCode

./: .gitmodules
2015/: Cargo.toml
2015/input/: day16_example.txt  day19_example.txt
2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  main.rs
2019/: Cargo.toml
2019/src/: day01.rs  day02.rs  main.rs
2022/: Cargo.toml  rust-toolchain
2022/1/: Cargo.toml
2022/1/src/: main.rs
2022/2/: Cargo.toml
2022/2/src/: main.rs
2022/src/: day03.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day4.rs  main.rs
examples/2015/: 12.txt
