[package]
name = "aoc_2015"
version = "0.1.0"
authors = ["Lukas Fischer <rust@o1oo11oo.de>"]
edition = "2021"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
log = "0.4.17"
md5 = "0.7.0"
nom = "7.1.1"
parse-display = "0.8.0"
pretty_env_logger = "0.4.0"
rayon = "1.6.1"
